--- a/MessengerApp/app/src/main/res/values/themes.xml
+++ b/MessengerApp/app/src/main/res/values/themes.xml
@@ -1,9 +1,5 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Base application theme. -->
-    <style name="Base.Theme.MessengerApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
 
-    <style name="Theme.MessengerApp" parent="Base.Theme.MessengerApp" />
+
 </resources>
