--- a/MessengerApp/app/src/main/res/layout/fragment_settings.xml
+++ b/MessengerApp/app/src/main/res/layout/fragment_settings.xml
@@ -6,13 +6,91 @@
     tools:context=".Fragments.SettingsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Account Settings"
-        android:textSize="30dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        />
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_marginBottom="32dp"> <!-- Increase bottom margin -->
+
+            <ImageView
+                android:id="@+id/cover_image"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:src="@drawable/cover"
+                android:scaleType="centerCrop"
+                />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="150dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/profile">
+            </de.hdodenhof.circleimageview.CircleImageView>
+
+            <TextView
+                android:id="@+id/usernamesettings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                 android:text="usernmae"
+                android:layout_below="@+id/profile_image"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="15dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:layout_marginBottom="20dp"
+                >
+
+            </TextView>
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cv1"
+        android:background="@color/colorProfile"
+        android:layout_marginTop="40dp"
+        android:orientation="horizontal"
+        android:padding="6dp"
+        android:gravity="center_horizontal"> <!-- Center horizontally -->
+
+        <ImageView
+            android:id="@+id/set_facebook"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/fb"
+            android:scaleType="centerCrop"
+            android:layout_marginTop="2dp"
+            android:layout_marginRight="35dp"
+            android:layout_gravity="center"></ImageView>
+
+        <ImageView
+            android:id="@+id/set_instagram"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/instagram"
+            android:scaleType="centerCrop"
+            android:layout_marginRight="35dp"
+            android:layout_gravity="center"></ImageView>
+
+        <ImageView
+            android:id="@+id/set_website"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/website"
+            android:scaleType="centerCrop"
+            android:layout_marginTop="3dp"
+            android:layout_gravity="center"></ImageView>
+    </LinearLayout>
 
 </RelativeLayout>
