--- a/MessengerApp/app/src/main/res/menu/menu_main.xml
+++ b/MessengerApp/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.messengerapp.MainActivity">
+    tools:context="com.message.messengerapp.MainActivity">
     <item
         android:id="@+id/actionLogout"
         android:orderInCategory="100"
