--- a/MessengerApp/app/src/main/res/layout/user_search_item_layout.xml
+++ b/MessengerApp/app/src/main/res/layout/user_search_item_layout.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:ignore="ExtraText">
+    android:padding="8dp"> <!-- Reduce the padding here -->
 
+    <!-- Your existing layout content -->
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profileimage"
         android:layout_width="60dp"
@@ -19,10 +19,9 @@
         android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/profileimage"
+
         android:layout_centerInParent="true"
-        android:layout_marginLeft="14dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginLeft="12dp"
         android:layout_toRightOf="@id/profileimage"
         android:text="user name"
         android:textSize="19sp"></TextView>
@@ -31,43 +30,44 @@
         android:id="@+id/imageonline"
         android:layout_width="18dp"
         android:layout_height="18dp"
-        app:civ_border_width="12dp"
         app:civ_border_color="#05df29"
+        app:civ_border_width="12dp"
         android:src="@drawable/ic_profile"
         android:layout_below="@+id/username"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="-16dp"
-        android:layout_toRightOf="@+id/username"
         android:layout_toEndOf="@+id/profileimage"
-        android:visibility="gone"
-        ></de.hdodenhof.circleimageview.CircleImageView>
+        android:layout_toRightOf="@+id/username"
 
+        ></de.hdodenhof.circleimageview.CircleImageView>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageoffline"
         android:layout_width="18dp"
         android:layout_height="18dp"
-        app:civ_border_width="12dp"
         app:civ_border_color="#bfbfbf"
+        app:civ_border_width="12dp"
         android:src="@drawable/ic_profile"
         android:layout_below="@+id/username"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="-16dp"
-        android:layout_toRightOf="@+id/username"
         android:layout_toEndOf="@+id/profileimage"
+        android:layout_toRightOf="@+id/username"
         android:visibility="gone"
+
         ></de.hdodenhof.circleimageview.CircleImageView>
+
     <TextView
         android:id="@+id/messagelast"
         android:layout_below="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_marginLeft="12dp"
         android:layout_marginTop="14dp"
         android:layout_toRightOf="@id/profileimage"
         android:padding="6dp"
         android:textSize="19sp"
+
         android:maxLines="1"
         android:textColor="@color/colorPrimaryDark"
         ></TextView>
